#2. Calculation of the total time for categories and tasks

--- a/src/main/resources/templates/main-page.html
+++ b/src/main/resources/templates/main-page.html
@@ -12,6 +12,9 @@
     <div>
         <a href="/this-month">События в этом месяце</a>
     </div>
+    <div>
+        <a href="/productivity">Продуктивность последнего месяца</a>
+    </div>
 
 </div>
 </body>
