#4. Task summary table

--- a/src/main/resources/templates/main-page.html
+++ b/src/main/resources/templates/main-page.html
@@ -7,13 +7,7 @@
 <body>
 <div>
     <div>
-        <a href="/next-events">Посмотреть предстоящие события</a>
-    </div>
-    <div>
-        <a href="/this-month">События в этом месяце</a>
-    </div>
-    <div>
-        <a href="/productivity">Продуктивность последнего месяца</a>
+        <a href="/productivity-table">Таблица продуктивности</a>
     </div>
 
 </div>
