--- a/src/main/resources/templates/productivity.html
+++ b/src/main/resources/templates/productivity.html
@@ -19,7 +19,7 @@
 <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
     <header class="mb-auto">
         <div>
-            <h3 class="float-md-start mb-0">Stay Focused</h3>
+            <h3 class="float-md-start mb-0"><a class="text-decoration-none" href="/">Stay Focused</a></h3>
             <nav class="nav nav-masthead justify-content-center float-md-end">
                 <a class="nav-link fw-bold py-1 px-0 active" aria-current="page"
                    href="/productivity-table">Productivity</a>
@@ -30,16 +30,46 @@
     </header>
 
     <main class="px-3">
-        <h1>You can do all things.</h1>
-        <p class="lead">Have a good time. Life is too short to get bogged down and be discouraged. You have to keep
-            moving. You have to keep going. Put one foot in front of the other, smile and just keep on rolling.</p>
+        <div class="card mx-auto">
+            <div class="card-header text-black h4 text-center">Month productivity</div>
+            <div class="card-body">
+                <table id="table" class="table align-middle bg-white">
+                    <thead class="bg-light">
+                    <tr>
+                        <th>Task</th>
+                        <th>Category</th>
+                        <th>Time</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="task : ${tasks}">
+                        <td>
+                            <div class="d-flex align-items-center">
+                                <div class="ms-3">
+                                    <p class="fw-bold mb-1" th:text="${task.name}"></p>
+                                </div>
+                            </div>
+                        </td>
+                        <td>
+                            <p class="fw-normal mb-1" th:text="${task.category}"></p>
+                        </td>
+                        <td>
+                            <p class="fw-normal mb-1" th:text="${task.time}"></p>
+                        </td>
+                    </tr>
+                    </tbody>
+
+                </table>
+            </div>
+        </div>
+
     </main>
 
     <footer class="mt-auto text-white-50">
         <p>Created by Michael <a href="https://www.t.me/FLlGHT" class="text-white">"flight"</a> Fedorenko</p>
     </footer>
 </div>
-
+<script src="/scripts/productivity.js"></script>
 
 </body>
 </html>
