--- a/src/main/resources/templates/productivity.html
+++ b/src/main/resources/templates/productivity.html
@@ -5,16 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/productivity.css">
     <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/cover/">
-    <link href="/css/bootstrap.min.css" rel="stylesheet"
+    <link rel="stylesheet" href="/css/bootstrap.min.css"
           integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
             crossorigin="anonymous"></script>
-<body class="d-flex h-100 text-center text-bg-dark">
 </head>
+<body class="d-flex h-100 text-center text-bg-dark">
 
 <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
     <header class="mb-auto">
@@ -28,6 +29,11 @@
             </nav>
         </div>
     </header>
+
+    <form id="date-picker-form" th:action="@{/productivity-table/}">
+        <input class="card mx-auto mb-2" type="date" th:name="begin-date"/>
+        <input class="card mx-auto mb-2" value="show" type="submit"/>
+    </form>
 
     <div class="d-flex align-items-start mb-2">
         <div class="сol">
@@ -72,7 +78,7 @@
                 <div class="card-body">
                     <p class="text-black" th:text="'Productive time: ' + ${stats.productiveTime}"></p>
                     <p class="text-black" th:text="'Total time: ' + ${stats.totalTime}"></p>
-                    <p class="text-black" th:text="'Percentage: '+ ${stats.percentage} + '%'"></p>
+                    <p class="text-black" th:text="'Productivity percentage: '+ ${stats.percentage} + '%'"></p>
                 </div>
             </div>
         </div>
