--- a/src/main/resources/templates/productivity.html
+++ b/src/main/resources/templates/productivity.html
@@ -15,115 +15,113 @@
             integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
             crossorigin="anonymous"></script>
 </head>
-<body class="d-flex h-100 text-center justify-content-center text-bg-dark">
+<body class="text-bg-dark">
 
+<header class="py-2 px-4">
+    <div>
+        <h3 class="float-md-start mb-0"><a class="text-decoration-none" href="/">Stay Focused</a></h3>
+        <nav class="nav nav-masthead justify-content-center float-md-end">
+            <a class="nav-link fw-bold py-1 px-0 active" aria-current="page"
+               href="/productivity-table">Productivity</a>
+            <a class="nav-link fw-bold py-1 px-0" href="#">Feature-1</a>
+            <a class="nav-link fw-bold py-1 px-0" href="#">Feature-2</a>
+        </nav>
+    </div>
+</header>
 
-<div class="cover-container d-flex w-100 h-100 p-5 justify-content-center flex-column">
-    <header class="mb-auto">
-        <div>
-            <h3 class="float-md-start mb-0"><a class="text-decoration-none" href="/">Stay Focused</a></h3>
-            <nav class="nav nav-masthead justify-content-center float-md-end">
-                <a class="nav-link fw-bold py-1 px-0 active" aria-current="page"
-                   href="/productivity-table">Productivity</a>
-                <a class="nav-link fw-bold py-1 px-0" href="#">Feature-1</a>
-                <a class="nav-link fw-bold py-1 px-0" href="#">Feature-2</a>
-            </nav>
-        </div>
-    </header>
+<main>
 
-    <div class="d-flex justify-content-center align-items-start">
+    <div class="d-flex py-5">
         <div class="сol">
-            <main class="px-3">
-                <div class="card mx-auto">
-                    <div class="card-header text-black h4 text-center">Month productivity</div>
-                    <div class="card-body">
-                        <table id="table" class="table align-middle bg-white">
-                            <thead class="bg-light">
-                            <tr class="text-nowrap">
-                                <th>Task</th>
-                                <th>Category</th>
-                                <th th:each="i : ${#numbers.sequence(1, stats.getWeeksNumber())}"
-                                    th:text="'Week ' + ${i}"></th>
-                                <th>Total</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr th:each="task : ${tasks}">
-                                <td>
-                                    <div class="d-flex justify-content-start text-md-start">
-                                        <div class="col-sm-12">
-                                            <p class="fw-bold mb-1 text-nowrap" th:text="${task.name}"></p>
-                                        </div>
+            <div class="card mx-auto">
+                <div class="card-header text-black h4 text-center">Month productivity</div>
+                <div class="card-body">
+                    <table id="table" class="table align-middle bg-white">
+                        <thead class="bg-light">
+                        <tr class="text-nowrap">
+                            <th>Task</th>
+                            <th>Category</th>
+                            <th th:each="i : ${#numbers.sequence(1, stats.getWeeksNumber())}"
+                                th:text="'Week ' + ${i}"></th>
+                            <th>Total</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr th:each="task : ${tasks}">
+                            <td>
+                                <div class="d-flex justify-content-start text-md-start">
+                                    <div class="col-sm-12">
+                                        <p class="fw-bold mb-1 text-nowrap" th:text="${task.name}"></p>
                                     </div>
-                                </td>
-                                <td>
-                                    <p class="fw-normal mb-1 text-nowrap" th:text="${task.category}"></p>
-                                </td>
-                                <td th:each="i : ${#numbers.sequence(0, stats.getWeeksNumber() - 1)}">
-                                    <p class="fw-normal" th:text="${task.timeByWeek[i]}"></p>
-                                </td>
-                                <td>
-                                    <p class="fw-normal" th:text="${task.totalTime}"></p>
-                                </td>
-                            </tr>
+                                </div>
+                            </td>
+                            <td>
+                                <p class="fw-normal mb-1 text-nowrap" th:text="${task.category}"></p>
+                            </td>
+                            <td th:each="i : ${#numbers.sequence(0, stats.getWeeksNumber() - 1)}">
+                                <p class="fw-normal" th:text="${task.timeByWeek[i]}"></p>
+                            </td>
+                            <td>
+                                <p class="fw-normal" th:text="${task.totalTime}"></p>
+                            </td>
+                        </tr>
 
-                            </tbody>
-                        </table>
-                    </div>
+                        </tbody>
+                    </table>
                 </div>
+            </div>
 
 
-                <div class="card mx-auto">
-                    <div class="card-body">
-                        <table class="table align-middle bg-white">
-                            <thead class="bg-light">
-                            <tr class="text-nowrap">
-                                <th>Task</th>
-                                <th></th>
-                                <th th:each="i : ${#numbers.sequence(1, stats.getWeeksNumber())}"
-                                    th:text="'Week ' + ${i}"></th>
-                                <th>Total</th>
-                            </tr>
-                            </thead>
+            <div class="card mx-auto">
+                <div class="card-body">
+                    <table class="table align-middle bg-white">
+                        <thead class="bg-light">
+                        <tr class="text-nowrap">
+                            <th>Task</th>
+                            <th></th>
+                            <th th:each="i : ${#numbers.sequence(1, stats.getWeeksNumber())}"
+                                th:text="'Week ' + ${i}"></th>
+                            <th>Total</th>
+                        </tr>
+                        </thead>
 
-                            <tbody>
-                            <tr>
-                                <td class="col-sm-12">
-                                    <p class="text-nowrap fw-bold ">Total time: </p>
-                                </td>
-                                <td>
+                        <tbody>
+                        <tr>
+                            <td class="col-sm-12">
+                                <p class="text-nowrap fw-bold ">Total time: </p>
+                            </td>
+                            <td>
 
-                                </td>
-                                <td th:each="i : ${#numbers.sequence(0, stats.getWeeksNumber() - 1)}">
-                                    <p class="fw-normal" th:text="${stats.timeByWeek[i]}"></p>
-                                </td>
-                                <td>
-                                    <p class="fw-normal" th:text="${stats.totalProductiveTime}"></p>
-                                </td>
-                            </tr>
+                            </td>
+                            <td th:each="i : ${#numbers.sequence(0, stats.getWeeksNumber() - 1)}">
+                                <p class="fw-normal" th:text="${stats.timeByWeek[i]}"></p>
+                            </td>
+                            <td>
+                                <p class="fw-normal" th:text="${stats.totalProductiveTime}"></p>
+                            </td>
+                        </tr>
 
-                            <tr>
-                                <td>
-                                    <p class="text-nowrap fw-bold">Percentage: </p>
-                                </td>
-                                <td>
+                        <tr>
+                            <td>
+                                <p class="text-nowrap fw-bold">Percentage: </p>
+                            </td>
+                            <td>
 
-                                </td>
-                                <td th:each="i : ${#numbers.sequence(0, stats.getWeeksNumber() - 1)}">
-                                    <p class="fw-normal text-nowrap" th:text="${stats.percentageByWeek[i]} + '%'"></p>
-                                </td>
-                                <td>
-                                    <p class="fw-normal text-nowrap" th:text="${stats.totalPercentage} + ' %'"></p>
-                                </td>
-                            </tr>
+                            </td>
+                            <td th:each="i : ${#numbers.sequence(0, stats.getWeeksNumber() - 1)}">
+                                <p class="fw-normal text-nowrap" th:text="${stats.percentageByWeek[i]} + '%'"></p>
+                            </td>
+                            <td>
+                                <p class="fw-normal text-nowrap" th:text="${stats.totalPercentage} + ' %'"></p>
+                            </td>
+                        </tr>
 
-                            </tbody>
-                        </table>
-                    </div>
+                        </tbody>
+                    </table>
                 </div>
+            </div>
 
 
-            </main>
         </div>
         <div class="col">
             <div class="card mx-auto">
@@ -137,10 +135,14 @@
         </div>
     </div>
 
-    <footer class="mt-auto text-white-50">
-        <p>Created by Michael <a href="https://www.t.me/FLlGHT" class="text-white">"flight"</a> Fedorenko</p>
-    </footer>
-</div>
+</main>
+
+<footer class="py-3 text-center text-white-50">
+    <div class="container">
+    <p>Created by Michael <a href="https://www.t.me/FLlGHT" class="text-white">"flight"</a> Fedorenko</p>
+    </div>
+</footer>
+
 <script src="/scripts/productivity.js"></script>
 
 </body>
