--- a/src/main/resources/templates/main-page.html
+++ b/src/main/resources/templates/main-page.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" class="h-100">
+<html xmlns:th="http://www.thymeleaf.org" lang="en" class="h-100">
 <head>
     <title>SF</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/css/main.css">
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/cover/">
-    <link href="/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-            crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/productivity.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+
+    <script src="/webjars/jquery/3.6.0/jquery.min.js"></script>
+    <script src="/webjars/bootstrap/5.2.0/js/bootstrap.min.js"></script>
 </head>
 <body class="d-flex h-100 text-center text-bg-dark">
 
@@ -21,10 +19,10 @@
         <div>
             <h3 class="float-md-start mb-0">Stay Focused</h3>
             <nav class="nav nav-masthead justify-content-center float-md-end">
-                <a class="nav-link fw-bold py-1 px-0 active" aria-current="page"
-                   href="/productivity-table">Productivity</a>
-                <a class="nav-link fw-bold py-1 px-0" href="#">Feature-1</a>
-                <a class="nav-link fw-bold py-1 px-0" href="#">Feature-2</a>
+                <a class="nav-link fw-bold py-1 px-0" aria-current="page"
+                   href="/productivity/week">Weekly productivity</a>
+                <a class="nav-link fw-bold py-1 px-0"
+                   href="/productivity/month">Monthly productivity</a>
             </nav>
         </div>
     </header>
