--- a/src/main/resources/templates/week.html
+++ b/src/main/resources/templates/week.html
@@ -1,40 +1,73 @@
 <!DOCTYPE html>
-<html lang="en" class="h-100">
+<html xmlns:th="http://www.thymeleaf.org" lang="en" class="h-100">
 <head>
     <title>SF</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/css/main.css">
+
     <link rel="stylesheet" href="/css/productivity.css">
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/cover/">
-    <link rel="stylesheet" href="/css/bootstrap.min.css"
-          integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-            crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/style.css">
+
+    <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+    <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 </head>
 <body class="text-bg-dark">
 
+<!--header-->
 <header class="py-2 px-4">
     <div>
-        <h3 class="float-md-start mb-0"><a class="text-decoration-none" href="/">Stay Focused</a></h3>
+        <a class="float-md-start nav-link fw-bold py-1 px-0" href="/">Stay Focused</a>
         <nav class="nav nav-masthead justify-content-center float-md-end">
-            <a class="nav-link fw-bold py-1 px-0 active" aria-current="page"
-               href="/productivity-table">Productivity</a>
-            <a class="nav-link fw-bold py-1 px-0" href="#">Feature-1</a>
-            <a class="nav-link fw-bold py-1 px-0" href="#">Feature-2</a>
+            <a class="nav-link fw-bold py-1 px-0" aria-current="page"
+               href="/productivity/week">Weekly productivity</a>
+            <a class="nav-link fw-bold py-1 px-0"
+               href="/productivity/month">Monthly productivity</a>
         </nav>
     </div>
 </header>
 
 <main>
 
-    <div class="d-flex py-5">
-        <div class="сol">
+<!--    date picker-->
+    <div class="container">
+        <form method="get" th:action="@{/productivity/week}" th:object="${weeks}">
+            <div class="form-group row align-items-end">
+                <div class="col-md-4 mt-2">
+                    <label for="from">Date from</label>
+                    <div class="input-group date">
+                        <input type="date" class="form-control" id="from" autocomplete="off" th:name="from"/>
+                        <div class="input-group-append">
+                            <span class="input-group-text"><i class="far fa-calendar-alt"></i></span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 mt-2">
+                    <label for="to">Date to</label>
+                    <div class="input-group date">
+                        <input type="date" class="form-control" id="to" autocomplete="off" th:name="to"/>
+                        <div class="input-group-append">
+                            <span class="input-group-text"><i class="far fa-calendar-alt"></i></span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-2">
+                    <button class="btn btn-primary" type="submit">Show</button>
+                </div>
+
+            </div>
+        </form>
+    </div>
+
+<!--    productive info-->
+    <div class="d-flex m-5 py-5">
+        <div class="сol col-md-9">
+
+<!--            weeks productivity table-->
             <div class="card mx-auto">
-                <div class="card-header text-black h4 text-center">Month productivity</div>
+                <div class="card-header text-black h4 text-center">Weeks productivity</div>
                 <div class="card-body">
                     <table id="table" class="table align-middle bg-white">
                         <thead class="bg-light">
@@ -72,6 +105,7 @@
             </div>
 
 
+<!--            weeks stats-->
             <div class="card mx-auto">
                 <div class="card-body">
                     <table class="table align-middle bg-white">
@@ -123,8 +157,10 @@
 
 
         </div>
-        <div class="col">
-            <div class="card mx-auto">
+
+<!--           weeks stats-->
+        <div class="col col-md-3">
+            <div class="card">
                 <div class="card-header text-black h4 text-center"> Month stats</div>
                 <div class="card-body">
                     <p class="text-black" th:text="'Productive time: ' + ${stats.totalProductiveTime}"></p>
@@ -137,6 +173,7 @@
 
 </main>
 
+<!--footer-->
 <footer class="py-3 text-center text-white-50">
     <div class="container">
     <p>Created by Michael <a href="https://www.t.me/FLlGHT" class="text-white">"flight"</a> Fedorenko</p>
@@ -144,6 +181,8 @@
 </footer>
 
 <script src="/scripts/productivity.js"></script>
+<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 
 </body>
 </html>
