#11. Add styles dependencies

--- a/src/main/resources/templates/month.html
+++ b/src/main/resources/templates/month.html
@@ -5,8 +5,8 @@
     <title>Monthly</title>
 
     <link rel="stylesheet" href="/css/productivity.css">
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" th:href="@{webjars/bootstrap/css/bootstrap.min.css}">
 
     <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
     <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
