--- a/src/main/resources/templates/month.html
+++ b/src/main/resources/templates/month.html
@@ -56,20 +56,33 @@
         <div class="card-header text-black h4 text-center">Months productivity</div>
         <div class="card-body">
 
-<!--            months productivity table-->
+            <!--            months productivity table-->
             <div class="table-responsive">
-                <table class="table table-striped table-sm">
-<!--                    table headers-->
+                <table id="table" class="table table-striped table-sm">
+                    <!--                    table headers-->
                     <thead>
                     <th>Task</th>
                     <th>Category</th>
-                    <th th:each="number : ${#numbers.sequence(1, months.getCount())}"
+                    <th th:each="number : ${#numbers.sequence(1, months.count)}"
                         th:text="'Month ' + ${number}"></th>
                     <th>Total</th>
                     </thead>
-<!--                    table body-->
+                    <!--                    table body-->
                     <tbody>
-
+                    <tr th:each="task : ${months.tasks}">
+                        <td>
+                            <p th:text="${task.name}"></p>
+                        </td>
+                        <td>
+                            <p th:text="${task.category}"></p>
+                        </td>
+                        <td th:each="time : ${task.getTimeByPeriod()}">
+                            <p th:text="${time}"></p>
+                        </td>
+                        <td>
+                            <p th:text="${task.getTotalTime()}"></p>
+                        </td>
+                    </tr>
                     </tbody>
                 </table>
             </div>
