--- a/src/main/resources/templates/month.html
+++ b/src/main/resources/templates/month.html
@@ -52,29 +52,35 @@
         </form>
     </div>
 
-    <div class="m-5 card">
+    <!--            months productivity table-->
+    <div class="mt-5 ms-5 me-5 card">
         <div class="card-header text-black h4 text-center">Months productivity</div>
         <div class="card-body">
 
-            <!--            months productivity table-->
             <div class="table-responsive">
                 <table id="table" class="table table-striped table-sm">
                     <!--                    table headers-->
                     <thead>
-                    <th>Task</th>
-                    <th>Category</th>
-                    <th th:each="number : ${#numbers.sequence(1, months.count)}"
-                        th:text="'Month ' + ${number}"></th>
-                    <th>Total</th>
+                    <tr>
+                        <th class="col-sm-3">Task</th>
+                        <th class="col-sm-3">Category</th>
+
+                        <div class="col-sm-4">
+                            <th th:each="number : ${#numbers.sequence(1, months.count)}"
+                                th:text="'Month ' + ${number}"></th>
+                            <th>Total</th>
+                        </div>
+
+                    </tr>
                     </thead>
                     <!--                    table body-->
                     <tbody>
-                    <tr th:each="task : ${months.tasks}">
+                    <tr th:each="task : ${months.getTasks()}">
                         <td>
-                            <p th:text="${task.name}"></p>
+                            <p th:text="${task.getName()}"></p>
                         </td>
                         <td>
-                            <p th:text="${task.category}"></p>
+                            <p th:text="${task.getCategory()}"></p>
                         </td>
                         <td th:each="time : ${task.getTimeByPeriod()}">
                             <p th:text="${time}"></p>
@@ -87,6 +93,65 @@
                 </table>
             </div>
 
+        </div>
+    </div>
+
+    <!--    month productivity stats-->
+    <div class="ms-5 me-5 mt-1 card">
+        <div class="card-body">
+            <div class="table-responsive text-black">
+                <table class="table table-striped table-sm">
+                    <thead>
+                    <tr>
+                        <th class="col-sm-6"></th>
+
+                        <div class="col-sm-4">
+                            <th th:each="number : ${#numbers.sequence(1, months.count)}"
+                                th:text="'Month ' + ${number}"></th>
+                            <th>Total</th>
+                        </div>
+
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>
+                            <p>Productive time</p>
+                        </td>
+                        <td th:each="stat : ${months.getSummary().getPeriodStats()}">
+                            <p th:text="${stat.getProductiveTime()}"></p>
+                        </td>
+                        <td>
+                            <p th:text="${months.getSummary().getTotalStats().getProductiveTime()}"></p>
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>
+                            <p>Total time</p>
+                        </td>
+                        <td th:each="stat : ${months.getSummary().getPeriodStats()}">
+                            <p th:text="${stat.getTotalTime()}"></p>
+                        </td>
+                        <td>
+                            <p th:text="${months.getSummary().getTotalStats().getTotalTime()}"></p>
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>
+                            <p>Percentage</p>
+                        </td>
+                        <td th:each="stat : ${months.getSummary().getPeriodStats()}">
+                            <p th:text="${stat.getPercentage()}"></p>
+                        </td>
+                        <td>
+                            <p th:text="${months.getSummary().getTotalStats().getPercentage()}"></p>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 
